# toDoListProject

./: .gitignore  Dockerfile  README.md  ci.env  conftest.py  docker-compose-ci.yaml  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
core/: admin.py  models.py
core/migrations/: 0001_initial.py
deploy/: nginx.conf
toDoListProject/: asgi.py  settings.py  urls.py  wsgi.py
toDoListProject/bot/: apps.py  models.py  serializers.py  urls.py  views.py
toDoListProject/bot/management/commands/: runbot.py
toDoListProject/bot/migrations/: 0001_initial.py  0002_rename_user_id_tguser_user.py
toDoListProject/bot/tg/: client.py  commands.py  dc.py
toDoListProject/core/: admin.py  apps.py  fields.py  models.py  serializers.py  urls.py  views.py
toDoListProject/goals/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
toDoListProject/goals/migrations/: 0001_initial.py  0002_goal.py  0003_alter_goal_description.py  0004_remove_goal_is_archived_goalcomment.py  0005_board_alter_goalcomment_text_goalcategory_board_and_more.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py
toDoListProject/tests/: factories.py  simple_test.py
toDoListProject/tests/goals/board/: test_board_create_view.py  test_board_view.py
